write REST output based on extension

--- a/mmind.conf
+++ b/mmind.conf
@@ -24,8 +24,9 @@
 
     <Location "/api/">
         SetHandler perl-script
-        PerlSetVar Apache2RESTHandlerRootClass "MMind::REST::API"
         PerlSetVar Apache2RESTAPIBase "/api/"
+        PerlSetVar Apache2RESTHandlerRootClass "MMind::REST::API"
+        PerlSetVar Apache2RESTWriterSelectMethod "extension"
         PerlResponseHandler Apache2::REST
     </Location>
 </VirtualHost>
