--- a/mmind.conf
+++ b/mmind.conf
@@ -27,6 +27,7 @@
         PerlSetVar Apache2RESTAPIBase "/api/"
         PerlSetVar Apache2RESTHandlerRootClass "MMind::REST::API"
         PerlSetVar Apache2RESTWriterSelectMethod "extension"
+        PerlSetVar Apache2RESTWriterDefault "json"
         PerlResponseHandler Apache2::REST
     </Location>
 </VirtualHost>
